Fix z-index of the sidebar trigger
The z-index of the "#app-content" is now set in the server to 1000. Due
to the layout changes the trigger is now the child of a sibling of
"#app-content" instead of a descendant of "#app-content", so its z-index
must be higher than the one for "#app-content" to appear in front of it.

--- a/css/style.scss
+++ b/css/style.scss
@@ -757,8 +757,8 @@ video {
 	position: absolute;
 	top: 0;
 	right: 0;
-	/* Higher than the z-index of the emptycontent */
-	z-index: 50;
+	/* Higher than the z-index of the app-content */
+	z-index: 1050;
 	cursor: pointer;
 }
 
